# vec_gemma

./: .gitignore  README.md  pyproject.toml
src/: train.ipynb  train.py  train_on_multigpu.py  transformers_train.ipynb
src/VAEs/: LinearVAE.py  Perceptron.py  VAE.py
src/gemma/: model copy.py  model.py
src/transformers_gemma2/: modeling_gemma2.py
